add paperless-pull service

--- a/templates/init/systemd/paperless-pull.service.j2
+++ b/templates/init/systemd/paperless-pull.service.j2
@@ -2,11 +2,11 @@
 # {{ ansible_managed }}
 
 [Unit]
-Description             = paperless service with docker compose
-PartOf                  = docker.service
+Description             = create docker compose config file for paperless
+PartOf                  = paperless.service
 After                   = docker.service
 Requires                = paperless-config.service
-Requires                = paperless-pull.service
+Before                  = paperless.service
 
 [Service]
 Type                    = oneshot
@@ -15,13 +15,11 @@ EnvironmentFile         = {{ paperless_defaults_directory }}/paperless
 RemainAfterExit         = true
 WorkingDirectory        = {{ paperless_install_path }}/active
 {% if paperless_service.command == 'docker-compose' %}
-ExecStart               = /usr/bin/docker-compose $OPTIONS_UP
-ExecStop                = /usr/bin/docker-compose $OPTIONS_DOWN
+ExecStart               = /usr/bin/docker-compose $OPTIONS_PULL
 {% else %}
-ExecStart               = /usr/bin/docker compose $OPTIONS_UP
-ExecStop                = /usr/bin/docker compose $OPTIONS_DOWN
+ExecStart               = /usr/bin/docker compose $OPTIONS_PULL
 {% endif %}
-TimeoutSec              = 900
+TimeoutSec              = 1200
 
 PrivateTmp              = yes
 UMask                   = 077
