fix systemd unit files

--- a/templates/init/systemd/paperless-pull.service.j2
+++ b/templates/init/systemd/paperless-pull.service.j2
@@ -4,7 +4,7 @@
 [Unit]
 Description             = create docker compose config file for paperless
 PartOf                  = paperless.service
-After                   = docker.service
+After                   = docker.service paperless-config.service
 Requires                = paperless-config.service
 Before                  = paperless.service
 
